See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.78.00

              pnmcrop: Add -closeness

16.12.25 BJH  Release 10.77.00

              pnmpad: Fix bug: incorrect output width.  Introduced in
              Netpbm 10.72 (July 2015).

              Makeman: Slight improvement to formatting of man pages.
              Thanks Werner LEMBERG <wl@gnu.org>.

              Test: Skip tests of some parts that are configured out of the
              build.

16.09.27 BJH  Release 10.76.00

              pnmquantall: Fix failure when temporary file location is
              not the same filesystem as the output file.

              pnmquantall: Fix incorrect handling of when the Pnmremap or
              the final rename fails.

              giftopnm: Fix bug: crash on little-endian computers that can't
              toleration unaligned memory access.  Thanks Ignatios Souvatzis
              (is@netbsd.org).  Broken in Netpbm 10.47 (June 2009).

              cmuwmtopbm: Fix trivial memory leak.  Always broken (cmuwmtopbm
              was in primordial Pbmplus, in 1988).

              Build: Add PKG_CONFIG make variable.

              Build: tifftopnm.c: Fix undefined WIFSIGNALED, etc. in 

16.06.26 BJH  Release 10.75.00

              pbmtextps: Add -leftmargin, -rightmargin, -topmargin,
              -bottommargin, -ascent, -descent, -pad, -crop.

              pbmtextps: Add -dump-ps.

              pbmtextps: Abort with error instead of generating single space
              when user supplies no text.

              pbmtextps: Accept fractional -fontsize.
              
              pbmtextps: Change margins for non-default fonts.

              pbmtextps: Minor output changes caused by code cleanup.

              bmptopnm: Add ability to convert Version 4 and 5 Windows BMP.

              pbmtext: Remove undocumented -dump option; add 'genfontc'