@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.78.00
 
+              svgtopam: Fix crash when out of memory.  Always broken
+              (svgtopam was new in Netpbm 10.33 (March 2006)).
+
               pnmcrop: Add -closeness
 
 16.12.25 BJH  Release 10.77.00
